@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-22T16:29:26Z",
-  "count_outdated" : 1,
-  "uniques_outdated" : 1,
+  "timestamp" : "2022-10-26T08:24:28Z",
+  "count_outdated" : 3,
+  "uniques_outdated" : 3,
   "count" : 4,
   "uniques" : 4,
   "clones" : [
-    {
-      "timestamp": "2022-10-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-10-22T00:00:00Z",
       "count": 1,
